[gd_scene load_steps=3 format=3 uid="uid://egvwrqm0nkrv"]

[ext_resource type="Script" path="res://codes/ui.gd" id="1_cnayr"]

[sub_resource type="LabelSettings" id="LabelSettings_alxl0"]
outline_size = 10
outline_color = Color(0.0208333, 0.0208333, 0.0208333, 1)

[node name="UI" type="Control" node_paths=PackedStringArray("excuteButton", "applyButton", "resetButton")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cnayr")
excuteButton = NodePath("BGPanel/MarginContainer/VBoxContainer/Buttons/execute")
applyButton = NodePath("BGPanel/MarginContainer/VBoxContainer/Buttons/apply")
resetButton = NodePath("BGPanel/MarginContainer/VBoxContainer/reset")

[node name="BGPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_top = -2.0
offset_right = 250.0
offset_bottom = -206.0
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="BGPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0833333, 0.0833333, 0.0833333, 1)

[node name="MarginContainer" type="MarginContainer" parent="BGPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="BGPanel/MarginContainer"]
layout_mode = 2

[node name="PresetContainer" type="HBoxContainer" parent="BGPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Preset_label" type="Label" parent="BGPanel/MarginContainer/VBoxContainer/PresetContainer"]
layout_mode = 2
text = "Presets"

[node name="Control" type="Control" parent="BGPanel/MarginContainer/VBoxContainer/PresetContainer"]
custom_minimum_size = Vector2(19.78, 0)
layout_mode = 2

[node name="OptionButton" type="OptionButton" parent="BGPanel/MarginContainer/VBoxContainer/PresetContainer"]
layout_mode = 2
selected = 0
allow_reselect = true
item_count = 2
popup/item_0/text = "Setting1"
popup/item_1/text = "Setting2"
popup/item_1/id = 1

[node name="Color_label" type="Label" parent="BGPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Color"

[node name="Colors" type="HBoxContainer" parent="BGPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="start&end" type="ColorPickerButton" parent="BGPanel/MarginContainer/VBoxContainer/Colors"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_vertical = 0
color = Color(0.976471, 0.380392, 0.376471, 1)

[node name="path" type="ColorPickerButton" parent="BGPanel/MarginContainer/VBoxContainer/Colors"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_vertical = 0
color = Color(0.972549, 0.717647, 0.403922, 1)

[node name="wall" type="ColorPickerButton" parent="BGPanel/MarginContainer/VBoxContainer/Colors"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_vertical = 0
color = Color(0.368627, 0.294118, 0.317647, 1)

[node name="neighbour" type="ColorPickerButton" parent="BGPanel/MarginContainer/VBoxContainer/Colors"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_vertical = 0
color = Color(0.703947, 0.866862, 0.834409, 1)

[node name="visited" type="ColorPickerButton" parent="BGPanel/MarginContainer/VBoxContainer/Colors"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_vertical = 0
color = Color(0.300709, 0.489583, 0.454956, 1)

[node name="Size" type="HBoxContainer" parent="BGPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CellSize_label" type="Label" parent="BGPanel/MarginContainer/VBoxContainer/Size"]
layout_mode = 2
text = "Cell Size"

[node name="Control" type="Control" parent="BGPanel/MarginContainer/VBoxContainer/Size"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="BGPanel/MarginContainer/VBoxContainer/Size"]
layout_mode = 2
text = "48"
alignment = 1
max_length = 3
virtual_keyboard_type = 2

[node name="Visibility" type="HBoxContainer" parent="BGPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TextVisibility_label" type="Label" parent="BGPanel/MarginContainer/VBoxContainer/Visibility"]
layout_mode = 2
text = "Text Visibility"

[node name="Control" type="Control" parent="BGPanel/MarginContainer/VBoxContainer/Visibility"]
custom_minimum_size = Vector2(12.54, 0)
layout_mode = 2

[node name="CheckBox" type="CheckBox" parent="BGPanel/MarginContainer/VBoxContainer/Visibility"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4

[node name="Row" type="HBoxContainer" parent="BGPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="row_label" type="Label" parent="BGPanel/MarginContainer/VBoxContainer/Row"]
layout_mode = 2
text = "Row"

[node name="Control" type="Control" parent="BGPanel/MarginContainer/VBoxContainer/Row"]
custom_minimum_size = Vector2(67.59, 0)
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="BGPanel/MarginContainer/VBoxContainer/Row"]
layout_mode = 2
text = "10"
alignment = 1
max_length = 3
virtual_keyboard_type = 2

[node name="Column" type="HBoxContainer" parent="BGPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="column_label" type="Label" parent="BGPanel/MarginContainer/VBoxContainer/Column"]
layout_mode = 2
text = "Column"

[node name="Control" type="Control" parent="BGPanel/MarginContainer/VBoxContainer/Column"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="BGPanel/MarginContainer/VBoxContainer/Column"]
layout_mode = 2
size_flags_horizontal = 8
text = "10"
alignment = 1
max_length = 3
virtual_keyboard_type = 2

[node name="SimulationTime" type="VBoxContainer" parent="BGPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SimulationTime_label" type="Label" parent="BGPanel/MarginContainer/VBoxContainer/SimulationTime"]
layout_mode = 2
text = "Simulation Time"

[node name="HBoxContainer" type="HBoxContainer" parent="BGPanel/MarginContainer/VBoxContainer/SimulationTime"]
layout_mode = 2

[node name="Control" type="Control" parent="BGPanel/MarginContainer/VBoxContainer/SimulationTime/HBoxContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="HSlider" type="HSlider" parent="BGPanel/MarginContainer/VBoxContainer/SimulationTime/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.05
max_value = 10.0
value = 0.05

[node name="Control2" type="Control" parent="BGPanel/MarginContainer/VBoxContainer/SimulationTime/HBoxContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="Buttons" type="HBoxContainer" parent="BGPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="execute" type="Button" parent="BGPanel/MarginContainer/VBoxContainer/Buttons"]
self_modulate = Color(1, 0, 0.25, 1)
layout_mode = 2
size_flags_horizontal = 3
text = "Execute"

[node name="apply" type="Button" parent="BGPanel/MarginContainer/VBoxContainer/Buttons"]
self_modulate = Color(0, 0.71875, 1, 1)
layout_mode = 2
size_flags_horizontal = 3
text = "Apply"

[node name="reset" type="Button" parent="BGPanel/MarginContainer/VBoxContainer"]
self_modulate = Color(1, 0.96875, 0, 1)
layout_mode = 2
text = "Reset"

[node name="hardReset" type="Button" parent="BGPanel/MarginContainer/VBoxContainer"]
self_modulate = Color(0.34375, 0, 1, 1)
layout_mode = 2
text = "Hard Reset"

[node name="Help" type="Label" parent="BGPanel"]
z_index = 1
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -101.0
grow_horizontal = 2
grow_vertical = 0
text = "LMB - Select Start and End Point
RMB - Make Wall
Arrow Keys - Move"
label_settings = SubResource("LabelSettings_alxl0")
autowrap_mode = 2

[connection signal="mouse_entered" from="BGPanel" to="." method="_on_bg_panel_mouse_entered"]
[connection signal="mouse_exited" from="BGPanel" to="." method="_on_bg_panel_mouse_exited"]
[connection signal="item_selected" from="BGPanel/MarginContainer/VBoxContainer/PresetContainer/OptionButton" to="." method="_on_preset_item_selected"]
[connection signal="color_changed" from="BGPanel/MarginContainer/VBoxContainer/Colors/start&end" to="." method="_on_startend_color_changed"]
[connection signal="color_changed" from="BGPanel/MarginContainer/VBoxContainer/Colors/path" to="." method="_on_path_color_changed"]
[connection signal="color_changed" from="BGPanel/MarginContainer/VBoxContainer/Colors/wall" to="." method="_on_wall_color_changed"]
[connection signal="color_changed" from="BGPanel/MarginContainer/VBoxContainer/Colors/neighbour" to="." method="_on_neighbour_color_changed"]
[connection signal="color_changed" from="BGPanel/MarginContainer/VBoxContainer/Colors/visited" to="." method="_on_visited_color_changed"]
[connection signal="text_changed" from="BGPanel/MarginContainer/VBoxContainer/Size/LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="pressed" from="BGPanel/MarginContainer/VBoxContainer/Visibility/CheckBox" to="." method="_on_check_box_pressed"]
[connection signal="text_changed" from="BGPanel/MarginContainer/VBoxContainer/Row/LineEdit" to="." method="_on_row_line_edit_text_changed"]
[connection signal="text_changed" from="BGPanel/MarginContainer/VBoxContainer/Column/LineEdit" to="." method="_on_column_line_edit_text_changed"]
[connection signal="value_changed" from="BGPanel/MarginContainer/VBoxContainer/SimulationTime/HBoxContainer/HSlider" to="." method="_on_time_slider_value_changed"]
[connection signal="pressed" from="BGPanel/MarginContainer/VBoxContainer/Buttons/execute" to="." method="_on_execute_pressed"]
[connection signal="pressed" from="BGPanel/MarginContainer/VBoxContainer/Buttons/apply" to="." method="_on_apply_button_pressed"]
[connection signal="pressed" from="BGPanel/MarginContainer/VBoxContainer/reset" to="." method="_on_button_pressed"]
[connection signal="pressed" from="BGPanel/MarginContainer/VBoxContainer/hardReset" to="." method="_on_hard_reset_pressed"]
